[package]
name = "baffao-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
base64 = "0.22.0"
chrono = "0.4.35"
config = "0.14.0"
cookie = "0.18.0"
hex = "0.4.3"
jsonwebtoken = "9.2.0"
oauth2 = "4.4.2"
reqwest = "0.11.24"
ring = "0.17.8"
serde = "1.0.197"
serde_json = "1.0.114"
