[package]
name = "baffao-proxy"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
baffao = { path = "../baffao" }
config = "0.14.0"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
oauth2 = "4.4.2"
serde = { version = "1.0.199", features = ["derive"] }
tokio = { "version" = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
