[package]
name = "baffao"
version = "0.0.1"
authors = ["CerberAuth <hello@cerberauth.com>"]
repository = "https://github.com/cerberauth/baffao"
homepage = "https://github.com/cerberauth/baffao"
documentation = "https://github.com/cerberauth/baffao"
keywords = ["proxy", "oauth2", "authentication", "authorization", "auth"]
license = "MIT"
description = "BAckend For Frontend for your SPA authentication and authorization."
edition = "2021"
readme = "../README.md"

[dependencies]
anyhow = "1.0.82"
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.0"
chrono = "0.4.38"
config = "0.14.0"
cookie = "0.18.1"
hex = "0.4.3"
http = "1.1.0"
jsonwebtoken = "9.3.0"
oauth2 = "4.4.2"
reqwest = "0.12.4"
ring = "0.17.8"
serde = "1.0.199"
serde_json = "1.0.116"
